drkns 01.05.2019 23:00:19 +0100 - build 5392

1. Рефакторинг.

2. Больше тестов.

drkns 26.04.2019 23:37:23 +0100 - build 5391

1. Продолжение 5368.

drkns 25.04.2019 23:57:58 +0100 - build 5390

1. Рефакторинг.

2. Больше тестов.

drkns 25.04.2019 22:42:44 +0100 - build 5389

1. 0003706: При нажатии Enter сбрасывается выделение в текущей строке

svs 24.04.2019 16:11:54 +0300 - build 5388

1. SQLite 3.28.0

drkns 18.04.2019 21:59:52 +0100 - build 5387

1. Новая версия fmt.

2. Костыль для поддержки Clang 8.

3. Мелкий рефакторинг.

drkns 17.04.2019 22:23:24 +0100 - build 5386

1. Процесс сборки:
   - папка bootstrap переехала в IntDir (в некоторых генерируемых файлах содержатся платформозависимые данные).
   - упрощен формат vbuild.m4 - теперь там только номер.

drkns 16.04.2019 08:17:59 +0100 - build 5385

1. Уточнение 5384.

drkns 15.04.2019 21:42:35 +0100 - build 5384

1. Рефакторинг.

2. Пожалуйста, не пихайте в git файлы с crlf концами строк. Спасибо.

drkns 05.04.2019 17:10:06 +0100 - build 5383

1. С форума: уточнения для WindowMode = false.

drkns 03.04.2019 20:01:25 +0100 - build 5382

1. Рефакторинг.

drkns 02.04.2019 19:41:21 +0100 - build 5381

1. Стандартная имплементация Boyer-Moore-Horspool в поиске файлов.

2. Рефакторинг.

drkns 28.03.2019 16:45:06 +0000 - build 5380

1. Запуск скринсейвера сбрасывает позицию вюьпорта.

drkns 28.03.2019 13:54:13 +0000 - build 5379

1. Рефакторинг.

drkns 25.03.2019 17:22:38 +0000 - build 5378

1. Мелкий рефакторинг.

2. Больше тестов.

drkns 22.03.2019 23:45:48 +0000 - build 5377

1. Fix GCC debug build.

drkns 20.03.2019 23:35:45 +0000 - build 5376

1. Для юнит-тестов используется Catch2.

2. Тесты запускаются как часть процесса сборки (debug - всегда, release - опционально).

3. Продолжение 5373.2 - убрано еще немного ненужного кода.

drkns 13.03.2019 22:27:54 +0000 - build 5375

1. В исключениях SQLite указывается имя базы.

w17 12.03.2019 15:24:39 +0300 - build 5374

1. Уточнение 5360.
