@@ -1,3 +1,9 @@
+drkns 03.05.2019 22:15:49 +0100 - build 5393
+
+1. 0003709: Меняются значения относительных дат в фильтре
+
+2. Пара мелочей.
+
 drkns 01.05.2019 23:00:19 +0100 - build 5392
 
 1. Рефакторинг.
